--- a/index_arquivos/TV/TV/BUSCA.html
+++ b/index_arquivos/TV/TV/BUSCA.html
@@ -435,57 +435,57 @@ Runtime Família Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Tv Metropolitana Rio Ao Vivo
 .html">
-NOME🔴
+Tv Metropolitana Rio Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Qtal Channel Ao Vivo
 .html">
-NOME🔴
+Qtal Channel Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Tv Web Sul Bahia Ao Vivo
 .html">
-NOME🔴
+Tv Web Sul Bahia Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Tv Metro (Rede Metropolitana) Ao Vivo
 .html">
-NOME🔴
+Tv Metro (Rede Metropolitana) Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Record News Ao Vivo
 .html">
-NOME🔴
+Record News Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Rede TV Ao Vivo
 .html">
-NOME🔴
+Rede TV Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Tv Jundiaí Hoje Ao Vivo
 .html">
-NOME🔴
+Tv Jundiaí Hoje Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Canal Plural Ao Vivo
 .html">
-NOME🔴
+Canal Plural Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Tv San Jones Ao Vivo
 .html">
-NOME🔴
+Tv San Jones Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
