--- a/index_arquivos/TV/TV/index.html
+++ b/index_arquivos/TV/TV/index.html
@@ -331,57 +331,57 @@ Runtime Família Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Tv Metropolitana Rio Ao Vivo
 .html" target="_blank">
-NOME⚫
+Tv Metropolitana Rio Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Qtal Channel Ao Vivo
 .html" target="_blank">
-NOME⚫
+Qtal Channel Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Tv Web Sul Bahia Ao Vivo
 .html" target="_blank">
-NOME⚫
+Tv Web Sul Bahia Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Tv Metro (Rede Metropolitana) Ao Vivo
 .html" target="_blank">
-NOME⚫
+Tv Metro (Rede Metropolitana) Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Record News Ao Vivo
 .html" target="_blank">
-NOME⚫
+Record News Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Rede TV Ao Vivo
 .html" target="_blank">
-NOME⚫
+Rede TV Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Tv Jundiaí Hoje Ao Vivo
 .html" target="_blank">
-NOME⚫
+Tv Jundiaí Hoje Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Canal Plural Ao Vivo
 .html" target="_blank">
-NOME⚫
+Canal Plural Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
-NOME⚫
+Tv San Jones Ao Vivo
 .html" target="_blank">
-NOME⚫
+Tv San Jones Ao Vivo
 </a></li></p>
 <!---------------------------------------------------------------------------------->
 <p><li><a href="index_arquivos/
