Update 1 - Copia.html

--- a/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -254,9 +254,9 @@ Quiosque na beira do Rio divisa de SP e Minas
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+56 ITENS - VÁRIOS MENUS E EXEMPLOS HTML
 .zip">
-NOME🔴
+56 ITENS - VÁRIOS MENUS E EXEMPLOS HTML
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
