--- a/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -260,9 +260,9 @@ Quiosque na beira do Rio divisa de SP e Minas
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+Filme de Suspense, Terror
 .zip">
-NOME🔴
+Filme de Suspense, Terror
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
