Update 1 - Copia.html

--- a/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -272,9 +272,9 @@ A LUZ DO DEMÔNIO (FILME)
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+ENTIDADE MALIGNA
 .zip">
-NOME🔴 
+ENTIDADE MALIGNA
  (FILME).</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
