--- a/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -284,10 +284,10 @@ Assassino no Andar de Cima
  (FILME).</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+FOTO COMPLETE
 .zip">
-NOME🔴 
- (FILME).</a></li>
+FOTO COMPLETE (É esse ótimo).
+ (FOTOS 04-09-23).</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
 LINK🔴
